k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petpal-backend
  namespace: petpal
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: petpal-backend
  template:
    metadata:
      labels:
        app: petpal-backend
    spec:
      containers:
        - name: petpal-backend
          image: petpal-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
