k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petpal-backend-service
  namespace: petpal
spec:
  selector:
    app: petpal-backend
  ports:
    - port: 8080
      targetPort: 8080
