k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petpal-frontend-service
  namespace: petpal
spec:
  selector:
    app: petpal-frontend
  ports:
    - port: 80
      targetPort: 80
