k8s/mysql-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-test-service
  namespace: petpal
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-test
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-test
  namespace: petpal
spec:
  selector:
    matchLabels:
      app: mysql-test
  template:
    metadata:
      labels:
        app: mysql-test
    spec:
      containers:
        - name: mysql-test
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-test-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-test-storage
          persistentVolumeClaim:
            claimName: mysql-test-pvc
